--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
         let newSet = new Set(arr);
 
     if(!arr.length || arr.length === 1 || newSet.size === 1){
-    return('-Infinity');
+    return(-Infinity);
     } 
 
    let max = Math.max(...arr);
